feat: criado doc para user
